# mcp-server-box

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: authentication.md  box_tools_collaboration.md  box_tools_docgen.md  box_tools_files.md  box_tools_folders.md  box_tools_generic.md  box_tools_metadata.md  box_tools_shared_links.md  box_tools_tasks.md  box_tools_web_link.md
src/: config.py  mcp_server_box.py  middleware.py  oauth_endpoints.py  server.py  server_context.py
src/mcp_auth/: auth_box.py  auth_box_api.py  auth_token.py
src/tool_registry/: folder_tools.py  metadata_tools.py  tasks_tools.py
src/tools/: box_tools_ai.py  box_tools_folders.py  box_tools_generic.py  box_tools_metadata.py  box_tools_tasks.py
tests/: conftest.py  test_box_tools_folders.py  test_box_tools_generic.py  test_box_tools_metadata.py  test_box_tools_tasks.py
